5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4000/executions/1756_1580.log
== TEST (2019-05-28 19:16:27) 
-- CODE:
vnotas = array(eval(input("Vetor de notas: ")))
nome = array(eval(input("Nome dos alunos")))
i = 0
f = 0 #faltaram a avaliacao
a = 0 #foram aprovados
r = 0 #alunos reprovados
m = 0 #maior media
while(i<size(vnotas)):
	if(vnotas[i] = -1):
		f = f+1
	i= i +1
print(f)
	if(vnotas[i]>=6):
		a = a+1
	i = i+1
print(a)
		
-- ERROR:
File "XXXX", line 9
    if(vnotas[i] = -1):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:16:39) 
-- CODE:
vnotas = array(eval(input("Vetor de notas: ")))
nome = array(eval(input("Nome dos alunos")))
i = 0
f = 0 #faltaram a avaliacao
a = 0 #foram aprovados
r = 0 #alunos reprovados
m = 0 #maior media
while(i<size(vnotas)):
	if(vnotas[i] = -1):
		f = f+1
	i= i +1
print(f)
	elif(vnotas[i]>=6):
		a = a+1
	i = i+1
print(a)
		
-- ERROR:
File "XXXX", line 9
    if(vnotas[i] = -1):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:16:55) 
-- CODE:
vnotas = array(eval(input("Vetor de notas: ")))
nome = array(eval(input("Nome dos alunos")))
i = 0
f = 0 #faltaram a avaliacao
a = 0 #foram aprovados
r = 0 #alunos reprovados
m = 0 #maior media
while(i<size(vnotas)):
	if(vnotas[i] == -1):
		f = f+1
	i= i +1
print(f)
	elif(vnotas[i]>=6):
		a = a+1
	i = i+1
print(a)
		
-- ERROR:
File "XXXX", line 13
    elif(vnotas[i]>=6):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:17:03) 
-- CODE:
vnotas = array(eval(input("Vetor de notas: ")))
nome = array(eval(input("Nome dos alunos")))
i = 0
f = 0 #faltaram a avaliacao
a = 0 #foram aprovados
r = 0 #alunos reprovados
m = 0 #maior media
while(i<size(vnotas)):
	if(vnotas[i] == -1):
		f = f+1
	i= i +1
print(f)
	if(vnotas[i]>=6):
		a = a+1
	i = i+1
print(a)
		
-- ERROR:
File "XXXX", line 13
    if(vnotas[i]>=6):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:17:28) 
-- CODE:
vnotas = array(eval(input("Vetor de notas: ")))
nome = array(eval(input("Nome dos alunos")))
i = 0
f = 0 #faltaram a avaliacao
a = 0 #foram aprovados
r = 0 #alunos reprovados
m = 0 #maior media
while(i<size(vnotas)):
	if(vnotas[i] == -1):
		f = f+1
	i= i +1
print(f)
	if(vnotas[i]>=6):
		a = a+1
	i = i+1
print(a)
		
-- ERROR:
File "XXXX", line 13
    if(vnotas[i]>=6):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:18:53) 
-- CODE:
vnotas = array(eval(input("Vetor de notas: ")))
nome = array(eval(input("Nome dos alunos")))
i = 0
f = 0 #faltaram a avaliacao
a = 0 #foram aprovados
r = 0 #alunos reprovados
m = 0 #maior media
while(i<size(vnotas)):
	if(vnotas[i] == -1):
		f = f+1
	i= i +1
print(f)
	if(vnotas[i]>=6):
		a = a+1
	i = i+1
print(a)
		
	

		
-- ERROR:
File "XXXX", line 13
    if(vnotas[i]>=6):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:19:28) 
-- CODE:
vnotas = array(eval(input("Vetor de notas: ")))
nome = array(eval(input("Nome dos alunos")))
i = 0
f = 0 #faltaram a avaliacao
a = 0 #foram aprovados
r = 0 #alunos reprovados
m = 0 #maior media
while(i<size(vnotas)):
	if(vnotas[i] == -1):
		f = f+1
	i= i +1
print(f)
	elif(vnotas[i]>=6):
		a = a+1
	i = i+1
print(a)
		
	

		
-- ERROR:
File "XXXX", line 13
    elif(vnotas[i]>=6):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:24:41) 
-- CODE:
vnotas = array(eval(input("Vetor de notas: ")))
nome = array(eval(input("Nome dos alunos")))
i = 0
f = 0 #faltaram a avaliacao
a = 0 #foram aprovados
r = 0 #alunos reprovados
m = 0 #maior media
while(i<size(vnotas)):
	if(vnotas[i] == -1):
		f = f+1
	i= i +1
print(f)
	if(vnotas[i]>=6):
		a = a+1
	i = i+1
print(a)
	if(vnotas[i]<=6):
		r = r+1
	i = i +1
print(r)
	if(sum(vnotas[i]) / size(vnotas[i])):
		m = m+1
	i = i+1
print(round(m, 3))

	
		
	

		
-- ERROR:
File "XXXX", line 13
    if(vnotas[i]>=6):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 12:25:53) 
-- CODE:
vnotas = array(eval(input("Vetor de notas: ")))
nome = array(eval(input("Nome dos alunos")))
i = 0
f = 0 #faltaram a avaliacao
a = 0 #foram aprovados
r = 0 #alunos reprovados
m = 0 #maior media
while(i<size(vnotas)):
	if(vnotas[i] == -1):
		f = f+1
	i= i +1
print(f)
	if(vnotas[i]>=6):
		a = a+1
	i = i+1
print(a)
	if(vnotas[i]<=6):
		r = r+1
	i = i +1
print(r)
	if(sum(vnotas[i]) / size(vnotas[i])):
		m = m+1
	i = i+1
print(round(m, 3))

	
		
	

		
-- EXECUTION TIME:
0.126238
-- ERROR:
  File "/home/codebench/codes/1756/1580/main.py", line 13
    if(vnotas[i]>=6):
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:26:26) 
-- CODE:
vnotas = array(eval(input("Vetor de notas: ")))
nome = array(eval(input("Nome dos alunos")))
i = 0
f = 0 #faltaram a avaliacao
a = 0 #foram aprovados
r = 0 #alunos reprovados
m = 0 #maior media
while(i<size(vnotas)):
	if(vnotas[i] == -1):
		f = f+1
	i= i +1
print(f)
	if(vnotas[i]>=6):
		a = a+1
	i = i+1
print(a)
	if(vnotas[i]<=6):
		r = r+1
	i = i +1
print(r)
	if(sum(vnotas[i]) / size(vnotas[i])):
		m = m+1
	i = i+1
print(round(m, 3))

	
		
	

		
-- ERROR:
File "XXXX", line 13
    if(vnotas[i]>=6):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:26:51) 
-- CODE:
vnotas = array(eval(input("Vetor de notas: ")))
nome = array(eval(input("Nome dos alunos")))
i = 0
f = 0 #faltaram a avaliacao
a = 0 #foram aprovados
r = 0 #alunos reprovados
m = 0 #maior media
while(i<size(vnotas)):
	if(vnotas[i] == -1):
		f = f+1
	i= i +1
print(f)
	if(vnotas[i]>=6):
		a = a+1
	i = i+1
print(a)
	if(vnotas[i]<=6):
		r = r+1
	i = i +1
print(r)
	if(sum(vnotas[i]) / size(vnotas[i])):
		m = m+1
	i = i+1
print(round(m, 3))

	
		
	

		
-- ERROR:
File "XXXX", line 13
    if(vnotas[i]>=6):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:26:56) 
-- CODE:
vnotas = array(eval(input("Vetor de notas: ")))
nome = array(eval(input("Nome dos alunos")))
i = 0
f = 0 #faltaram a avaliacao
a = 0 #foram aprovados
r = 0 #alunos reprovados
m = 0 #maior media
while(i<size(vnotas)):
	if(vnotas[i] == -1):
		f = f+1
	i= i +1
print(f)
	if(vnotas[i]>=6):
		a = a+1
	i = i+1
print(a)
	if(vnotas[i]<=6):
		r = r+1
	i = i +1
print(r)
	if(sum(vnotas[i]) / size(vnotas[i])):
		m = m+1
	i = i+1
print(round(m, 3))

	
		
	

		
-- ERROR:
File "XXXX", line 13
    if(vnotas[i]>=6):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:28:31) 
-- CODE:
vnotas = array(eval(input("Vetor de notas: ")))
nome = array(eval(input("Nome dos alunos")))
i = 0
f = 0 #faltaram a avaliacao
a = 0 #foram aprovados
r = 0 #alunos reprovados
m = 0 #maior media
while(i<size(vnotas)):
	if(vnotas[i] == -1):
		f = f+1
	i= i +1
print(f)
	if(vnotas[i]>6):
		a = a+1
	i = i+1
print(a)
	if(vnotas[i]<=6):
		r = r+1
	i = i +1
print(r)
	if(sum(vnotas[i]) / size(vnotas[i])):
		m = m+1
	i = i+1
print(round(m, 3))

	
		
	

		
-- ERROR:
File "XXXX", line 13
    if(vnotas[i]>6):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:28:31) 
-- CODE:
vnotas = array(eval(input("Vetor de notas: ")))
nome = array(eval(input("Nome dos alunos")))
i = 0
f = 0 #faltaram a avaliacao
a = 0 #foram aprovados
r = 0 #alunos reprovados
m = 0 #maior media
while(i<size(vnotas)):
	if(vnotas[i] == -1):
		f = f+1
	i= i +1
print(f)
	if(vnotas[i]>6):
		a = a+1
	i = i+1
print(a)
	if(vnotas[i]<=6):
		r = r+1
	i = i +1
print(r)
	if(sum(vnotas[i]) / size(vnotas[i])):
		m = m+1
	i = i+1
print(round(m, 3))

	
		
	

		
-- ERROR:
File "XXXX", line 13
    if(vnotas[i]>6):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:28:32) 
-- CODE:
vnotas = array(eval(input("Vetor de notas: ")))
nome = array(eval(input("Nome dos alunos")))
i = 0
f = 0 #faltaram a avaliacao
a = 0 #foram aprovados
r = 0 #alunos reprovados
m = 0 #maior media
while(i<size(vnotas)):
	if(vnotas[i] == -1):
		f = f+1
	i= i +1
print(f)
	if(vnotas[i]>6):
		a = a+1
	i = i+1
print(a)
	if(vnotas[i]<=6):
		r = r+1
	i = i +1
print(r)
	if(sum(vnotas[i]) / size(vnotas[i])):
		m = m+1
	i = i+1
print(round(m, 3))

	
		
	

		
-- ERROR:
File "XXXX", line 13
    if(vnotas[i]>6):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:28:32) 
-- CODE:
vnotas = array(eval(input("Vetor de notas: ")))
nome = array(eval(input("Nome dos alunos")))
i = 0
f = 0 #faltaram a avaliacao
a = 0 #foram aprovados
r = 0 #alunos reprovados
m = 0 #maior media
while(i<size(vnotas)):
	if(vnotas[i] == -1):
		f = f+1
	i= i +1
print(f)
	if(vnotas[i]>6):
		a = a+1
	i = i+1
print(a)
	if(vnotas[i]<=6):
		r = r+1
	i = i +1
print(r)
	if(sum(vnotas[i]) / size(vnotas[i])):
		m = m+1
	i = i+1
print(round(m, 3))

	
		
	

		
-- ERROR:
File "XXXX", line 13
    if(vnotas[i]>6):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:28:32) 
-- CODE:
vnotas = array(eval(input("Vetor de notas: ")))
nome = array(eval(input("Nome dos alunos")))
i = 0
f = 0 #faltaram a avaliacao
a = 0 #foram aprovados
r = 0 #alunos reprovados
m = 0 #maior media
while(i<size(vnotas)):
	if(vnotas[i] == -1):
		f = f+1
	i= i +1
print(f)
	if(vnotas[i]>6):
		a = a+1
	i = i+1
print(a)
	if(vnotas[i]<=6):
		r = r+1
	i = i +1
print(r)
	if(sum(vnotas[i]) / size(vnotas[i])):
		m = m+1
	i = i+1
print(round(m, 3))

	
		
	

		
-- ERROR:
File "XXXX", line 13
    if(vnotas[i]>6):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:28:32) 
-- CODE:
vnotas = array(eval(input("Vetor de notas: ")))
nome = array(eval(input("Nome dos alunos")))
i = 0
f = 0 #faltaram a avaliacao
a = 0 #foram aprovados
r = 0 #alunos reprovados
m = 0 #maior media
while(i<size(vnotas)):
	if(vnotas[i] == -1):
		f = f+1
	i= i +1
print(f)
	if(vnotas[i]>6):
		a = a+1
	i = i+1
print(a)
	if(vnotas[i]<=6):
		r = r+1
	i = i +1
print(r)
	if(sum(vnotas[i]) / size(vnotas[i])):
		m = m+1
	i = i+1
print(round(m, 3))

	
		
	

		
-- ERROR:
File "XXXX", line 13
    if(vnotas[i]>6):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:28:32) 
-- CODE:
vnotas = array(eval(input("Vetor de notas: ")))
nome = array(eval(input("Nome dos alunos")))
i = 0
f = 0 #faltaram a avaliacao
a = 0 #foram aprovados
r = 0 #alunos reprovados
m = 0 #maior media
while(i<size(vnotas)):
	if(vnotas[i] == -1):
		f = f+1
	i= i +1
print(f)
	if(vnotas[i]>6):
		a = a+1
	i = i+1
print(a)
	if(vnotas[i]<=6):
		r = r+1
	i = i +1
print(r)
	if(sum(vnotas[i]) / size(vnotas[i])):
		m = m+1
	i = i+1
print(round(m, 3))

	
		
	

		
-- ERROR:
File "XXXX", line 13
    if(vnotas[i]>6):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:28:32) 
-- CODE:
vnotas = array(eval(input("Vetor de notas: ")))
nome = array(eval(input("Nome dos alunos")))
i = 0
f = 0 #faltaram a avaliacao
a = 0 #foram aprovados
r = 0 #alunos reprovados
m = 0 #maior media
while(i<size(vnotas)):
	if(vnotas[i] == -1):
		f = f+1
	i= i +1
print(f)
	if(vnotas[i]>6):
		a = a+1
	i = i+1
print(a)
	if(vnotas[i]<=6):
		r = r+1
	i = i +1
print(r)
	if(sum(vnotas[i]) / size(vnotas[i])):
		m = m+1
	i = i+1
print(round(m, 3))

	
		
	

		
-- ERROR:
File "XXXX", line 13
    if(vnotas[i]>6):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:28:32) 
-- CODE:
vnotas = array(eval(input("Vetor de notas: ")))
nome = array(eval(input("Nome dos alunos")))
i = 0
f = 0 #faltaram a avaliacao
a = 0 #foram aprovados
r = 0 #alunos reprovados
m = 0 #maior media
while(i<size(vnotas)):
	if(vnotas[i] == -1):
		f = f+1
	i= i +1
print(f)
	if(vnotas[i]>6):
		a = a+1
	i = i+1
print(a)
	if(vnotas[i]<=6):
		r = r+1
	i = i +1
print(r)
	if(sum(vnotas[i]) / size(vnotas[i])):
		m = m+1
	i = i+1
print(round(m, 3))

	
		
	

		
-- ERROR:
File "XXXX", line 13
    if(vnotas[i]>6):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:28:32) 
-- CODE:
vnotas = array(eval(input("Vetor de notas: ")))
nome = array(eval(input("Nome dos alunos")))
i = 0
f = 0 #faltaram a avaliacao
a = 0 #foram aprovados
r = 0 #alunos reprovados
m = 0 #maior media
while(i<size(vnotas)):
	if(vnotas[i] == -1):
		f = f+1
	i= i +1
print(f)
	if(vnotas[i]>6):
		a = a+1
	i = i+1
print(a)
	if(vnotas[i]<=6):
		r = r+1
	i = i +1
print(r)
	if(sum(vnotas[i]) / size(vnotas[i])):
		m = m+1
	i = i+1
print(round(m, 3))

	
		
	

		
-- ERROR:
File "XXXX", line 13
    if(vnotas[i]>6):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:28:32) 
-- CODE:
vnotas = array(eval(input("Vetor de notas: ")))
nome = array(eval(input("Nome dos alunos")))
i = 0
f = 0 #faltaram a avaliacao
a = 0 #foram aprovados
r = 0 #alunos reprovados
m = 0 #maior media
while(i<size(vnotas)):
	if(vnotas[i] == -1):
		f = f+1
	i= i +1
print(f)
	if(vnotas[i]>6):
		a = a+1
	i = i+1
print(a)
	if(vnotas[i]<=6):
		r = r+1
	i = i +1
print(r)
	if(sum(vnotas[i]) / size(vnotas[i])):
		m = m+1
	i = i+1
print(round(m, 3))

	
		
	

		
-- ERROR:
File "XXXX", line 13
    if(vnotas[i]>6):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:28:32) 
-- CODE:
vnotas = array(eval(input("Vetor de notas: ")))
nome = array(eval(input("Nome dos alunos")))
i = 0
f = 0 #faltaram a avaliacao
a = 0 #foram aprovados
r = 0 #alunos reprovados
m = 0 #maior media
while(i<size(vnotas)):
	if(vnotas[i] == -1):
		f = f+1
	i= i +1
print(f)
	if(vnotas[i]>=6):
		a = a+1
	i = i+1
print(a)
	if(vnotas[i]<=6):
		r = r+1
	i = i +1
print(r)
	if(sum(vnotas[i]) / size(vnotas[i])):
		m = m+1
	i = i+1
print(round(m, 3))

	
		
	

		
-- ERROR:
File "XXXX", line 13
    if(vnotas[i]>=6):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:28:33) 
-- CODE:
vnotas = array(eval(input("Vetor de notas: ")))
nome = array(eval(input("Nome dos alunos")))
i = 0
f = 0 #faltaram a avaliacao
a = 0 #foram aprovados
r = 0 #alunos reprovados
m = 0 #maior media
while(i<size(vnotas)):
	if(vnotas[i] == -1):
		f = f+1
	i= i +1
print(f)
	if(vnotas[i]>=6):
		a = a+1
	i = i+1
print(a)
	if(vnotas[i]<6):
		r = r+1
	i = i +1
print(r)
	if(sum(vnotas[i]) / size(vnotas[i])):
		m = m+1
	i = i+1
print(round(m, 3))

	
		
	

		
-- ERROR:
File "XXXX", line 13
    if(vnotas[i]>=6):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:28:43) 
-- CODE:
vnotas = array(eval(input("Vetor de notas: ")))
nome = array(eval(input("Nome dos alunos")))
i = 0
f = 0 #faltaram a avaliacao
a = 0 #foram aprovados
r = 0 #alunos reprovados
m = 0 #maior media
while(i<size(vnotas)):
	if(vnotas[i] == -1):
		f = f+1
	i= i +1
print(f)
	if(vnotas[i]>=6):
		a = a+1
	i = i+1
print(a)
	if(vnotas[i]<6):
		r = r+1
	i = i +1
print(r)
	if(sum(vnotas[i]) / size(vnotas[i])):
		m = m+1
	i = i+1
print(round(m, 3))

	
		
	

		
-- ERROR:
File "XXXX", line 13
    if(vnotas[i]>=6):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:29:14) 
-- CODE:
vnotas = array(eval(input("Vetor de notas: ")))
nome = array(eval(input("Nome dos alunos")))
i = 0
f = 0 #faltaram a avaliacao
a = 0 #foram aprovados
r = 0 #alunos reprovados
m = 0 #maior media
while(i<size(vnotas)):
	if(vnotas[i] == -1):
		f = f+1
	i= i +1
print(f)
	if(vnotas[i]>=6):
		a = a+1
	i = i+1
print(a)
	if(vnotas[i]<6):
		r = r+1
	i = i +1
print(r)
	if(sum(vnotas[i]) / size(vnotas[i])):
		m = m+1
	i = i+1
print(round(m, 3))

	
		
	

		
-- ERROR:
File "XXXX", line 13
    if(vnotas[i]>=6):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:29:16) 
-- CODE:
vnotas = array(eval(input("Vetor de notas: ")))
nome = array(eval(input("Nome dos alunos")))
i = 0
f = 0 #faltaram a avaliacao
a = 0 #foram aprovados
r = 0 #alunos reprovados
m = 0 #maior media
while(i<size(vnotas)):
	if(vnotas[i] == -1):
		f = f+1
	i= i +1
print(f)
	if(vnotas[i]>=6):
		a = a+1
	i = i+1
print(a)
	if(vnotas[i]<6):
		r = r+1
	i = i +1
print(r)
	if(sum(vnotas[i]) / size(vnotas[i])):
		m = m+1
	i = i+1
print(round(m, 3))

	
		
	

		
-- ERROR:
File "XXXX", line 13
    if(vnotas[i]>=6):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:29:16) 
-- CODE:
vnotas = array(eval(input("Vetor de notas: ")))
nome = array(eval(input("Nome dos alunos")))
i = 0
f = 0 #faltaram a avaliacao
a = 0 #foram aprovados
r = 0 #alunos reprovados
m = 0 #maior media
while(i<size(vnotas)):
	if(vnotas[i] == -1):
		f = f+1
	i= i +1
print(f)
	if(vnotas[i]>=6):
		a = a+1
	i = i+1
print(a)
	if(vnotas[i]<6):
		r = r+1
	i = i +1
print(r)
	if(sum(vnotas[i]) / size(vnotas[i])):
		m = m+1
	i = i+1
print(round(m, 3))

	
		
	

		
-- ERROR:
File "XXXX", line 13
    if(vnotas[i]>=6):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:03:01) 
-- CODE:
vnotas = array(eval(input("Vetor de notas: ")))
nome = array(eval(input("Nome dos alunos")))
i = 0
f = 0 #faltaram a avaliacao
a = 0 #foram aprovados
r = 0 #alunos reprovados
m = 0 #maior media
n1 = 0 #alunos reprovados
n2 = 0 #alunos aprovados
while(i<size(vnotas)):
	if(vnotas[i] == -1):
		f = f+1
	i= i +1
	if(vnotas[i]>=6 and vnotas[i]<=10):
		a = a+1
		n2 = n2 + n[i]
	i = i+1

	if(vnotas[i]>=0 and vnotas[i]<6):
		r = r+1
		n1 = n1 + n[i]
	i = i +1
print(r)
	if(sum(vnotas[i]) / size(vnotas[i])):
		m = m+1
	i = i+1
print(round(m, 3))

	
		
	

		
-- ERROR:
File "XXXX", line 24
    if(sum(vnotas[i]) / size(vnotas[i])):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:16:30) 
-- CODE:
vnotas = array(eval(input("Vetor de notas: ")))
nome = array(eval(input("Nome dos alunos")))
i = 0
f = 0 #faltaram a avaliacao
a = 0 #foram aprovados
r = 0 #alunos reprovados
m = 0 #maior media
n1 = 0 #alunos reprovados
n2 = 0 #alunos aprovados
while(i<size(vnotas)):
	if(vnotas[i] == -1):
		f = f+1
	if(vnotas[i] > -1):
		if(vnotas[i]>=6 and vnotas[i]<=10):
			a = a+1
			n2 = n2 + n[i]
		elif(vnotas[i]>=0 and vnotas[i]<6):
			r = r+1
			n1 = n1 + n[i]
	i = i +1
i = 0
while(vnotas[i]!= max(vnotas)):
	i = i+1
print(f)
print(a)
print(r)

	
		
	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vnotas = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:17:00) 
-- CODE:
from numpy import*
vnotas = array(eval(input("Vetor de notas: ")))
nome = array(eval(input("Nome dos alunos")))
i = 0
f = 0 #faltaram a avaliacao
a = 0 #foram aprovados
r = 0 #alunos reprovados
m = 0 #maior media
n1 = 0 #alunos reprovados
n2 = 0 #alunos aprovados
while(i<size(vnotas)):
	if(vnotas[i] == -1):
		f = f+1
	if(vnotas[i] > -1):
		if(vnotas[i]>=6 and vnotas[i]<=10):
			a = a+1
			n2 = n2 + n[i]
		elif(vnotas[i]>=0 and vnotas[i]<6):
			r = r+1
			n1 = n1 + n[i]
	i = i +1
i = 0
while(vnotas[i]!= max(vnotas)):
	i = i+1
print(f)
print(a)
print(r)

	
		
	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:27:05) 
-- CODE:
from numpy import*
vnotas = array(eval(input("Vetor de notas: ")))
nome = array(eval(input("Nome dos alunos")))
i = 0
f = 0 #faltaram a avaliacao
a = 0 #foram aprovados
r = 0 #alunos reprovados
m = 0 #maior media
soma = 0
p = 0
while(i<size(vnotas)):
	if(vnotas[i] == -1):
		f = f+1
	if(vnotas[i] > -1):
		if(vnotas[i]>=6 and vnotas[i]<=10):
			a = a+1
			 soma =soma + vnotas[i]
		elif(vnotas[i]>=0 and vnotas[i]<6):
			r = r+1
			soma = soma + vnotas[i]
		p = p + 1
	i = i +1

while(vnotas[i]!= max(vnotas)):
	i = i+1
print(f)
print(a)
print(r)
print(round(soma/(a+r), 2)
print(vnotas[i])

	
		
	

		
-- ERROR:
File "XXXX", line 17
    soma =soma + vnotas[i]
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:27:08) 
-- CODE:
from numpy import*
vnotas = array(eval(input("Vetor de notas: ")))
nome = array(eval(input("Nome dos alunos")))
i = 0
f = 0 #faltaram a avaliacao
a = 0 #foram aprovados
r = 0 #alunos reprovados
m = 0 #maior media
soma = 0
p = 0
while(i<size(vnotas)):
	if(vnotas[i] == -1):
		f = f+1
	if(vnotas[i] > -1):
		if(vnotas[i]>=6 and vnotas[i]<=10):
			a = a+1
			 soma =soma + vnotas[i]
		elif(vnotas[i]>=0 and vnotas[i]<6):
			r = r+1
			soma = soma + vnotas[i]
		p = p + 1
	i = i +1

while(vnotas[i]!= max(vnotas)):
	i = i+1
print(f)
print(a)
print(r)
print(round(soma/(a+r), 2)
print(vnotas[i])

	
		
	

		
-- ERROR:
File "XXXX", line 17
    soma =soma + vnotas[i]
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:27:13) 
-- CODE:
from numpy import*
vnotas = array(eval(input("Vetor de notas: ")))
nome = array(eval(input("Nome dos alunos")))
i = 0
f = 0 #faltaram a avaliacao
a = 0 #foram aprovados
r = 0 #alunos reprovados
m = 0 #maior media
soma = 0
p = 0
while(i<size(vnotas)):
	if(vnotas[i] == -1):
		f = f+1
	if(vnotas[i] > -1):
		if(vnotas[i]>=6 and vnotas[i]<=10):
			a = a+1
			 soma =soma + vnotas[i]
		elif(vnotas[i]>=0 and vnotas[i]<6):
			r = r+1
			soma = soma + vnotas[i]
		p = p + 1
	i = i +1

while(vnotas[i]!= max(vnotas)):
	i = i+1
print(f)
print(a)
print(r)
print(round(soma/(a+r), 2)
print(vnotas[i])

	
		
	

		
-- ERROR:
File "XXXX", line 17
    soma =soma + vnotas[i]
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:28:19) 
-- CODE:
from numpy import*
vnotas = array(eval(input("Vetor de notas: ")))
nome = array(eval(input("Nome dos alunos")))
i = 0
f = 0 #faltaram a avaliacao
a = 0 #foram aprovados
r = 0 #alunos reprovados
m = 0 #maior media
soma = 0
p = 0
while(i<size(vnotas)):
	if(vnotas[i] == -1):
		f = f+1
	if(vnotas[i] > -1):
		if(vnotas[i]>=6 and vnotas[i]<=10):
			a = a+1
			 soma =soma + vnotas[i]
		elif(vnotas[i]>=0 and vnotas[i]<6):
			r = r+1
			soma = soma + vnotas[i]
		p = p + 1
	i = i +1

while(vnotas[i]!= max(vnotas)):
	i = i+1
print(f)
print(a)
print(r)
print(round(soma/(a+r), 2)
print(vnotas[i])

	
		
	

		
-- ERROR:
File "XXXX", line 17
    soma =soma + vnotas[i]
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:28:42) 
-- CODE:
from numpy import*
vnotas = array(eval(input("Vetor de notas: ")))
nome = array(eval(input("Nome dos alunos")))
i = 0
f = 0 #faltaram a avaliacao
a = 0 #foram aprovados
r = 0 #alunos reprovados
m = 0 #maior media
soma = 0
p = 0
while(i<size(vnotas)):
	if(vnotas[i] == -1):
		f = f+1
	if(vnotas[i] > -1):
		if(vnotas[i]>=6 and vnotas[i]<=10):
			a = a+1
			 soma =soma + vnotas[i]
		elif(vnotas[i]>=0 and vnotas[i]<6):
			r = r+1
			soma = soma + vnotas[i]
		p = p + 1
	i = i +1

while(vnotas[i]!= max(vnotas)):
	i = i+1
print(f)
print(a)
print(r)
print(round(soma/(a+r), 2)
print(vnotas[i])

	
		
	

		
-- ERROR:
File "XXXX", line 17
    soma =soma + vnotas[i]
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:29:12) 
-- CODE:
from numpy import*
vnotas = array(eval(input("Vetor de notas: ")))
nome = array(eval(input("Nome dos alunos")))
i = 0
f = 0 #faltaram a avaliacao
a = 0 #foram aprovados
r = 0 #alunos reprovados
m = 0 #maior media
soma = 0
p = 0
while(i<size(vnotas)):
	if(vnotas[i] == -1):
		f = f+1
	if(vnotas[i] > -1):
		if(vnotas[i]>=6 and vnotas[i]<=10):
			a = a+1
			soma =soma + vnotas[i]
		elif(vnotas[i]>=0 and vnotas[i]<6):
			r = r+1
			soma = soma + vnotas[i]
		p = p + 1
	i = i +1

while(vnotas[i]!= max(vnotas)):
	i = i+1
print(f)
print(a)
print(r)
print(round(soma/(a+r), 2)
print(vnotas[i])

	
		
	

		
-- ERROR:
File "XXXX", line 30
    print(vnotas[i])
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:29:47) 
-- CODE:
from numpy import*
vnotas = array(eval(input("Vetor de notas: ")))
nome = array(eval(input("Nome dos alunos")))
i = 0
f = 0 #faltaram a avaliacao
a = 0 #foram aprovados
r = 0 #alunos reprovados
m = 0 #maior media
soma = 0
p = 0
while(i<size(vnotas)):
	if(vnotas[i] == -1):
		f = f+1
	if(vnotas[i] > -1):
		if(vnotas[i]>=6 and vnotas[i]<=10):
			a = a+1
			soma =soma + vnotas[i]
		elif(vnotas[i]>=0 and vnotas[i]<6):
			r = r+1
			soma = soma + vnotas[i]
		p = p + 1
	i = i +1

while(vnotas[i]!= max(vnotas)):
	i = i+1
print(f)
print(a)
print(r)
print(round(soma/(a+r), 2)
print(nome[i])

	
		
	

		
-- ERROR:
File "XXXX", line 30
    print(nome[i])
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:30:16) 
-- CODE:
from numpy import*
vnotas = array(eval(input("Vetor de notas: ")))
nome = array(eval(input("Nome dos alunos")))
i = 0
f = 0 #faltaram a avaliacao
a = 0 #foram aprovados
r = 0 #alunos reprovados
m = 0 #maior media
soma = 0
p = 0
while(i<size(vnotas)):
	if(vnotas[i] == -1):
		f = f+1
	if(vnotas[i] > -1):
		if(vnotas[i]>=6 and vnotas[i]<=10):
			a = a+1
			soma =soma + vnotas[i]
		elif(vnotas[i]>=0 and vnotas[i]<6):
			r = r+1
			soma = soma + vnotas[i]
		p = p + 1
	i = i +1

while(nome[i]!= max(nome)):
	i = i+1
print(f)
print(a)
print(r)
print(round(soma/(a+r), 2)
print(nome[i])

	
		
	

		
-- ERROR:
File "XXXX", line 30
    print(nome[i])
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:32:10) 
-- CODE:
from numpy import*
vnotas = array(eval(input("Vetor de notas: ")))
nome = array(eval(input("Nome dos alunos")))
i = 0
f = 0 #faltaram a avaliacao
a = 0 #foram aprovados
r = 0 #alunos reprovados
m = 0 #maior media
soma = 0
p = 0
while(i<size(vnotas)):
	if(vnotas[i] == -1):
		f = f+1
	if(vnotas[i] > -1):
		if(vnotas[i]>=6 and vnotas[i]<=10):
			a = a+1
			soma =soma + vnotas[i]
		elif(vnotas[i]>=0 and vnotas[i]<6):
			r = r+1
			soma = soma + vnotas[i]
		p = p + 1
	i = i +1
i = 0
while(vnotas[i]!= max(vnotas[i])):
	i = i+1
print(f)
print(a)
print(r)
print(round(soma/(a+r), 2)
print(nome[i])

	
		
	

		
-- ERROR:
File "XXXX", line 30
    print(nome[i])
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:38:16) 
-- CODE:
from numpy import*
vnotas = array(eval(input("Vetor de notas: ")))
nome = array(eval(input("Nome dos alunos")))
i = 0
f = 0 #faltaram a avaliacao
a = 0 #foram aprovados
r = 0 #alunos reprovados
m = 0 #maior media
soma = 0
p = 0
while(i<size(vnotas)):
	if(vnotas[i] == -1):
		f = f+1
	if(vnotas[i] > -1):
		if(vnotas[i]>=6 and vnotas[i]<=10):
			a = a+1
			soma =soma + vnotas[i]
		elif(vnotas[i]>=0 and vnotas[i]<6):
			r = r+1
			soma = soma + vnotas[i]
		p = p + 1
	i = i +1
i = 0
while(vnotas[i]!= max(vnotas)):
	i = i+1
print(f)
print(a)
print(r)
print(round(soma/(a+r), 2)
print(nome[i])

	
		
	

		
-- ERROR:
File "XXXX", line 30
    print(nome[i])
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:39:50) 
-- CODE:
from numpy import*
vnotas = array(eval(input("Vetor de notas: ")))
nome = array(eval(input("Nome dos alunos")))
i = 0
f = 0 #faltaram a avaliacao
a = 0 #foram aprovados
r = 0 #alunos reprovados
m = 0 #maior media
soma = 0
p = 0
while(i<size(vnotas)):
	if(vnotas[i] == -1):
		f = f+1
	if(vnotas[i] > -1):
		if(vnotas[i]>=6 and vnotas[i]<=10):
			a = a+1
			soma =soma + vnotas[i]
		elif(vnotas[i]>=0 and vnotas[i]<6):
			r = r+1
			soma = soma + vnotas[i]
		p = p + 1
	i = i +1
i = 0
while(vnotas[i]!= max(vnotas)):
	i = i+1
print(f)
print(a)
print(r)
print(round(soma/(a+r), 2)
print(nome[i])
from numpy import *
v = array(eval(input("notas: ")))
n = array(eval(input("nomes: ")))
v1 = 0 #qtd de aprov
v2 = 0 #qtd de reprov
i = 0 #contadora
f = 0 #faltas
p = 0 #presentes
soma = 0
while (i < size(v)):
	if (v[i] > -1):
		if (v[i] >= 6 and v[i] <= 10):
			v1 = v1 + 1
			soma = soma + v[i]
		elif (v[i] < 6):
			v2 = v2 + 1
			soma = soma + v[i]
		p = p + 1 
	if (v[i] == -1):
		f = f + 1
	i = i + 1
i = 0
while (v[i] != max(v)):
	i = i + 1

print(f)
print(v1)
print(v2)
print(round(soma/(v1 + v2), 2))
print(n[i])

	
		
	

		
-- ERROR:
File "XXXX", line 30
    print(nome[i])
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:40:22) 
-- CODE:
from numpy import *
v = array(eval(input("notas: ")))
n = array(eval(input("nomes: ")))
v1 = 0 #qtd de aprov
v2 = 0 #qtd de reprov
i = 0 #contadora
f = 0 #faltas
p = 0 #presentes
soma = 0
while (i < size(v)):
	if (v[i] > -1):
		if (v[i] >= 6 and v[i] <= 10):
			v1 = v1 + 1
			soma = soma + v[i]
		elif (v[i] < 6):
			v2 = v2 + 1
			soma = soma + v[i]
		p = p + 1 
	if (v[i] == -1):
		f = f + 1
	i = i + 1
i = 0
while (v[i] != max(v)):
	i = i + 1

print(f)
print(v1)
print(v2)
print(round(soma/(v1 + v2), 2))
print(n[i])

		
	

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:41:45) 
-- CODE:
from numpy import *
v = array(eval(input("notas: ")))
n = array(eval(input("nomes: ")))
v1 = 0 #qtd de aprov
v2 = 0 #qtd de reprov
i = 0 #contadora
f = 0 #faltas
p = 0 #presentes
soma = 0
while (i < size(v)):
	if (v[i] > -1):
		if (v[i] >= 6 and v[i] <= 10):
			v1 = v1 + 1
			soma = soma + v[i]
		elif (v[i] < 6):
			v2 = v2 + 1
			soma = soma + v[i]
		p = p + 1 
	if (v[i] == -1):
		f = f + 1
	i = i + 1
i = 0
while (v[i] != max(v)):
	i = i + 1

print(f)
print(v1)
print(v2)
print(round(soma/(v1 + v2), 2))
print(n[i])

		
	

		
-- EXECUTION TIME:
0.273106
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
